fix audio stream problem

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <div class="resultContainer">
             <img id="resultImage"></img>
             <audio id="resultSound" autoplay>
-                <source src="/get_audio" type="audio/mpeg">
+                <source src="/get_audio" type="audio/mp3">
             </audio>
         </div>
         <div class="modelSelect">
